# devrel

./: .cspell.json  .dockerignore  .eslintignore  .eslintrc-jsc.yml  .eslintrc-node.yml  .eslintrc.yml  .gcloudignore  .gitignore  .hadolint.yml  .markdown-lint.yml  .pylintrc  .remarkrc.yml  .shellcheckrc  .travis.yml  .yamllint  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  Dockerfile  PIPELINES.md  README.md  checkstyle.xml  index.html  package-lock.json  package.json  phpcs.xml  run-nightly  run-pipeline  run-pipeline.sh
tools/apigee-config-diff/: .bandit  .gitignore  README.md  main.py  pipeline.sh  pom.xml  pyproject.toml  test_integration_main.py  test_main.py
tools/apigee-config-diff/diff/: check.py  process.py  test_check.py  test_diff.py  test_process.py  test_util.py  util.py
tools/apigee-config-diff/example/: pom.xml
tools/apigee-config-diff/example/resources/my-org/env/prod/: aliases.json  cache.json  (+5 more)
tools/apigee-config-diff/example/resources/my-org/org/: apiProducts.json  appGroup.json  developerApps.json  developers.json  reports.json
tools/apigee-config-diff/resources/my-org/org/: apiProducts.json
tools/apigee-config-diff/src/apigee_config_diff/: main.py
tools/apigee-config-diff/src/apigee_config_diff/diff/: check.py  diff.py  process.py  util.py
tools/apigee-config-diff/src/rgodoy/env/homolog/: targetServers.json
tools/apigee-config-diff/src/rgodoy/org/: developers.json
tools/apigee-config-diff/tests/: test_check.py  test_diff.py  test_integration_main.py  test_main.py  test_process.py  test_single_commit_integration.py  test_util.py
(+2090 files in other folders)
